# flatbuffers

rust/flatbuffers/: Cargo.toml
rust/flatbuffers/src/: builder.rs  lib.rs  minireflect.rs
src/: flatc.cpp  idl_gen_rust.cpp
