[package]
name = "flatbuffers"
version = "0.6.0"
authors = ["Robert Winslow <hello@rwinslow.com>", "FlatBuffers Maintainers"]
license = "Apache-2.0"
description = "Official FlatBuffers Rust runtime library."
homepage = "https://google.github.io/flatbuffers/"
repository = "https://github.com/google/flatbuffers"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]

[dependencies]
smallvec = "0.6"
fixedvec = { git = "https://github.com/m3rcuriel/fixedvec-rs", branch = "range_index" }

[features]
std = []
default = ["std"]
